--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
 contourpy==1.3.1
+crispy-bootstrap5==2025.4
 curve==0.0.7
 cycler==0.12.1
 Django==5.1.2
+django-crispy-forms==2.4
 et-xmlfile==1.1.0
 fonttools==4.56.0
 frozenlist==1.4.1
